udp-filter (0.2.3)
  * Modified behavior of -n --num_fields.  This is now -n --min-field-count.
    There must me more fields in a line than this, otherwise the line will
    be discarded.  The default is 14.  This was done so that we may add
    new fields to the log lines without needing to recompile and redeploy
    in use udp filters at the same time.
  * Changed --country_list to --country-list (with hyphen) to be more
    consistent with usual command line option conventions.

udp-filter (0.2.2) stable; urgency=low

  * Tim rewrote append_char function Removed exotic for/loop Replaced all 
    strtok with strchr.
  * Version 0.2: - IP Filtering - Geocoding at country, region, city and 
    latlon level - Fixed memory leaks - Roan is a hero
  * Added longitude / latitude geocoding.
  * Removed OS specific build file.
  * Improvements:
  * Added full support for ip address and ip range filtering Added full 
    support for regular expression matching Incorporated feedback from Tim, 
    still struggling 
  * Adding ip-filtering support (not working)
  * Check if country codes are valid and finish renaming stuff
  * Originally, this was udp.c, renamed to increase consistency.
  * Rename udp.c to udp-filter.c so now the binary file name and the source 
    filename are consistent.
  * Improving support for regular expressions.
  * Simple script to test code quality.
  * Ignore more build-specific files.
  * Merge "Fixed link."
  * Merge "Updated control file to work on emery server."
  * Merge "Added support for not having to define a filter, (the -f option)."
  * Added support for not having to define a filter, (the -f option).
  * Fixed link.
  * Updated control file to work on emery server.
  * Updated the documentation with the new -f or --force option.
  * Added example configuration control and copyright file and updated the 
    README file with detailed installation instructions.
  * Merge "Adding debian package support."